--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,11 @@
   </head>
   <body>
     <div class="main-container">
-      <div class="" data-button="menu">Start</div>
-      <div class="" data-button="1"></div>
-      <div class="" data-button="2"></div>
-      <div class="" data-button="3"></div>
-      <div class="" data-button="4"></div>
+      <div data-button="menu">Start</div>
+      <div data-button="1"></div>
+      <div data-button="2"></div>
+      <div data-button="3"></div>
+      <div data-button="4"></div>
     </div>
   </body>
 </html>
